V 
* features
- 
* bug fixes
- 

V 3.3.0 
* features
- switch services from current tab
* bug fixes
- 

V 3.2.2
* features
- 
* bug fixes
- fix context menu in lists
- fix governor description on load
- allow export of switch log to capabilities check mail

V 3.2.1
* features
- Italian translation (by Rino)
- minor layout optimisations
* bug fixes
- fix refresh not working after orientation change
- rare crash

V 3.2.0
* features
- optimise layout for ice cream sandwich (android 4)
- speedup profile switches
- new advanced statistics that allow filtering
- allow special cpu setting during profile switch
- settings for extensions
* bug fixes
- use added configuration as the current one
- cpufreq files not found in some kernels
- files only be read by root in some devices (JackieKu)

V 3.1.4
* features
- 
* bug fixes
- fixes ICS crashes (should fix HC as well)
- fix insert as new for configuration autoload

V 3.1.3
* features
- 
* bug fixes
- fixes

V 3.1.2
* features
- 
* bug fixes
- fix force closes

V 3.1.1
* features
- 
* bug fixes
- fix manual service changes getting confused by service state leave
- fix force closes

V 3.1.0 
* features
- background is more resistant to being killed
- switch log uses DB
- new advanced switch log with clear and mark (adv stats)
- refresh "current" view  
- extensions can be disabled 
* bug fixes
- save after insert as new
. force closes

V 3.0.2
* features
- 
* bug fixes
- minor fixes

V 3.0.1
* features
- 
* bug fixes
- minor fixes

V 3.0.0
* features
- new swipe friendly user interface
- rework backend and use background process to do the work
- initalise cpu tuner from (default) configurations 
- on power is stronger screen locked by default (enable the old sequence in settings) 
- insert as new: copy and insert an entry 
- editor close does sanity checks and asks the user or does not save
- separate statics and profile switch log and update on click