@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ID"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="15dp"
+    android:layout_width="300dp"
+    android:layout_height="match_parent"
+    android:lines="1"
+    android:padding="10dp"
+    android:text="profile"
     android:textAppearance="?android:attr/textAppearanceMedium" />
