@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="version">3.3.0-ja1</string>
+    <string name="version">3.3.0-ja2</string>
 
 </resources>
